<resources>
    <string name="app_name">Login</string>
    <string name="name2">Fernando Balladares</string>
    <string name="testText">Language: English</string>
    <string name="orientationText1">Portrait</string>
    <string name="orientationText2">Landscape</string>
    <string name="loginHintUsername">Username</string>
    <string name="loginHintPassword">Password</string>
    <string name="loginHintCode">Code</string>
    <string name="loginButton1">Login</string>
    <string name="contactButton">Show Contacts</string>
</resources>
